CHCLibCore

---------------------------------------------------------------------
03a.37
  Improve: cx.ath.choisnet.sql.ExportSQL (add schema name to export
  is optionnal; able to filter export)
---------------------------------------------------------------------
03a.36
  Prepare moving build to maven
---------------------------------------------------------------------
03a.35
  Fix: cx.ath.choisnet.sql.SQLTools (empty String)
---------------------------------------------------------------------
03a.34
  Add: cx.ath.choisnet.util.LinkedHashMapList
  Add: cx.ath.choisnet.util.AbstractMapCollection
  Add: cx.ath.choisnet.util.MapCollection
  Deprecated: cx.ath.choisnet.sql.mysql.MySQLTools#parseFieldValue
  Add: cx.ath.choisnet.sql.SQLTools
  Optimize: cx.ath.choisnet.sql.ExportSQL
  Some documentation
---------------------------------------------------------------------
03a.33
  Add: cx.ath.choisnet.util.SetWrapper
  Add: cx.ath.choisnet.util.MapKeyWrapper
  Modifications in:
    cx.ath.choisnet.sql.DataSourceFactory
    cx.ath.choisnet.sql.mysql.MySQLAdmin
    cx.ath.choisnet.sql.mysql.MyDataSourceFactory
    cx.ath.choisnet.sql.mysql.MySQLTools (TODO:Possible bug found
    here, need code review)
  Add: cx.ath.choisnet.sql.ExportSQL
---------------------------------------------------------------------
03a.32
  Documentation
---------------------------------------------------------------------
03a.30
  Minor fix in cx.ath.choisnet.lang.reflect.MappableHelper.toMap(Object object)
  Add some extra check in cx.ath.choisnet.io.HTMLWriter
  Major change: cx.ath.choisnet.lang.reflect.MappableHelperFactory
  is now an interface
  Add:  cx.ath.choisnet.lang.reflect.MappableHelperDefaultFactory
  Major change:  cx.ath.choisnet.lang.reflect.AbstractMappable
  Some improvement in cx.ath.choisnet.io.HTMLWriter
---------------------------------------------------------------------
03a.29
  mineur fix, improve doc:
    - cx.ath.choisnet.sql.SimpleDataSource