@@ -1,31 +1,43 @@
 package cx.ath.choisnet.util.datetime;
 
-import java.io.ObjectInputStream;
-import java.io.ObjectOutputStream;
+import java.io.Serializable;
+import java.text.DateFormat;
 import java.text.Format;
 import java.text.SimpleDateFormat;
-import java.util.Date;
 
 /**
+ * TODO:Doc!
  *
  * @author Claude CHOISNET
- *
  */
 public class BasicTime
-    implements java.io.Serializable, Cloneable, TimeInterface
+    implements Serializable, Cloneable, TimeInterface
 {
-    private static final long serialVersionUID = 1L;
-    protected static final String TIMEFMT = "HH:mm:ss";
-    protected static final SimpleDateFormat TIME_FMT = new SimpleDateFormat("HH:mm:ss");
+    private static final long serialVersionUID = 2L;
+    /**
+     * TODO:Doc!
+     */
+    public static final BasicTime MIN_VALUE = BasicTime.buildBasicTime(0, 0, 0);
+    /**
+     * TODO:Doc!
+     */
+    public static final BasicTime MAX_VALUE = BasicTime.buildBasicTime(23, 59, 59);
+    /** {@value} */
+    protected static final String TIME_FMT = "HH:mm:ss";
+    //protected static final SimpleDateFormat TIME_FMT = new SimpleDateFormat("HH:mm:ss");
     /** @serial */
     protected int hours;
     /** @serial */
     protected int minutes;
     /** @serial */
     protected int seconds;
-    public static final BasicTime MIN_VALUE = BasicTime.buildBasicTime(0, 0, 0);
-    public static final BasicTime MAX_VALUE = BasicTime.buildBasicTime(23, 59, 59);
 
+    /** For computing only - use {@link #getIsoDateFormat()} to access */
+    private transient DateFormat transient_ISO_DATE_FMT;// = new SimpleDateFormat(TIMEFMT);
+
+    /**
+     * TODO:Doc!
+     */
     public BasicTime(BasicTime time)
     {
         hours = -1;
@@ -34,18 +46,24 @@ public class BasicTime
 
         try {
             set(time.getHours(), time.getMinutes(), time.getSeconds());
-        }
-        catch(cx.ath.choisnet.util.datetime.BasicTimeException e) {
+            }
+        catch(BasicTimeException e) {
             throw new RuntimeException("Internal error", e);
-        }
+            }
     }
 
+    /**
+     * TODO:Doc!
+     */
     public BasicTime()
     {
-        this(new Date());
+        this(new java.util.Date());
     }
 
-    public BasicTime(Date javadate)
+    /**
+     * TODO:Doc!
+     */
+    public BasicTime(java.util.Date javadate)
     {
         hours = -1;
         minutes = -1;
@@ -54,8 +72,11 @@ public class BasicTime
         set(javadate);
     }
 
+    /**
+     * TODO:Doc!
+     */
     public BasicTime(int hours, int minutes, int secondes)
-        throws cx.ath.choisnet.util.datetime.BasicTimeException
+        throws BasicTimeException
     {
         this.hours = -1;
         this.minutes = -1;
@@ -64,8 +85,11 @@ public class BasicTime
         set(hours, minutes, secondes);
     }
 
+    /**
+     * TODO:Doc!
+     */
     public BasicTime(int hours, int minutes)
-        throws cx.ath.choisnet.util.datetime.BasicTimeException
+        throws BasicTimeException
     {
         this.hours = -1;
         this.minutes = -1;
@@ -74,8 +98,11 @@ public class BasicTime
         set(hours, minutes, 0);
     }
 
-    public BasicTime(long secondsFormMidnight)
-        throws cx.ath.choisnet.util.datetime.BasicDateTimeNegativeValueException
+    /**
+     * TODO:Doc!
+     */
+   public BasicTime(long secondsFormMidnight)
+        throws BasicDateTimeNegativeValueException
     {
         hours = -1;
         minutes = -1;
@@ -84,6 +111,9 @@ public class BasicTime
         set(secondsFormMidnight);
     }
 
+   /**
+    * TODO:Doc!
+    */
     public BasicTime(String time, SimpleDateFormat formatter)
         throws java.text.ParseException
     {
@@ -94,33 +124,39 @@ public class BasicTime
         set(formatter.parse(time));
     }
 
+    /**
+     * TODO:Doc!
+     */
     public void set(int hours, int minutes, int seconds)
-        throws cx.ath.choisnet.util.datetime.BasicTimeException
+        throws BasicTimeException
     {
         if(hours < 0 || hours > 23) {
             throw new BasicTimeException((new StringBuilder()).append("invalid hours : ").append(hours).toString());
-        }
+            }
 
         if(minutes < 0 || minutes > 59) {
             throw new BasicTimeException((new StringBuilder()).append("invalid minutes: ").append(minutes).toString());
-        }
+            }
 
         if(seconds < 0 || seconds > 59) {
             throw new BasicTimeException((new StringBuilder()).append("invalid seconds : ").append(seconds).toString());
-        }
+            }
         else {
             this.hours = hours;
             this.minutes = minutes;
             this.seconds = seconds;
-        }
+            }
     }
 
+    /**
+     * TODO:Doc!
+     */
     protected void set(long secondsFromMidnight)
-        throws cx.ath.choisnet.util.datetime.BasicDateTimeNegativeValueException
+        throws BasicDateTimeNegativeValueException
     {
         if(secondsFromMidnight < 0L) {
             throw new BasicDateTimeNegativeValueException();
-        }
+            }
 
         long toMuch = secondsFromMidnight / 0x15180L;
         secondsFromMidnight -= toMuch * 0x15180L;
@@ -133,40 +169,58 @@ public class BasicTime
 
         try {
             set((int)hours, (int)mins, (int)secondsFromMidnight);
-        }
-        catch(cx.ath.choisnet.util.datetime.BasicTimeException bug) {
+            }
+        catch(BasicTimeException bug) {
             throw new RuntimeException((new StringBuilder()).append("BasicTime.set( int secondsFormMidnight ) INTERNAL ERROR : ").append(bug).toString());
-        }
+            }
 
     }
 
+    /**
+     * TODO:Doc!
+     */
     protected void setWithFmtString(String fmtTime)
     {
-        hours = Integer.parseInt(fmtTime.substring(0, 2));
+        hours   = Integer.parseInt(fmtTime.substring(0, 2));
         minutes = Integer.parseInt(fmtTime.substring(3, 5));
         seconds = Integer.parseInt(fmtTime.substring(6));
     }
 
-    protected void set(Date javaDate)
+    /**
+     * TODO:Doc!
+     */
+    protected void set(java.util.Date javaDate)
     {
-        setWithFmtString(TIME_FMT.format(javaDate));
+        setWithFmtString(getIsoDateFormat().format(javaDate));
     }
 
+    /**
+     * TODO:Doc!
+     */
     public int getHours()
     {
         return hours;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public int getMinutes()
     {
         return minutes;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public int getSeconds()
     {
         return seconds;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public String toString()
     {
         return (new StringBuilder())
@@ -178,65 +232,85 @@ public class BasicTime
                     ).toString();
     }
 
+    /**
+     * TODO:Doc!
+     */
     public String toString(Format formatter)
     {
         return formatter.format(getJavaDate());
-
     }
 
+    /**
+     * TODO:Doc!
+     */
     public String toStringHours()
     {
         if(hours > 9) {
             return Integer.toString(hours);
-        }
+            }
         else {
             return (new StringBuilder())
                 .append('0')
                 .append(hours)
                 .toString();
-        }
+            }
     }
 
+    /**
+     * TODO:Doc!
+     */
     public String toStringMinutes()
     {
         return (new StringBuilder()).append(minutes <= 9 ? "0" : "").append(minutes).toString();
     }
 
+    /**
+     * TODO:Doc!
+     */
     public String toStringSeconds()
     {
         return (new StringBuilder()).append(seconds <= 9 ? "0" : "").append(seconds).toString();
     }
 
+    /**
+     * TODO:Doc!
+     */
     public long longValue()
     {
         return (long)(seconds + 60 * (minutes + 60 * hours));
     }
 
+    /**
+     * TODO:Doc!
+     */
     public java.util.Date getJavaDate()
     {
         try {
-            return TIME_FMT.parse(toString());
-        }
+            return getIsoDateFormat().parse(toString());
+            }
         catch(java.text.ParseException e) {
             throw new RuntimeException("BasicTime.getJavaDate() INTERNAL ERROR");
-        }
+            }
     }
 
+    @Override
     public boolean equals(TimeInterface anotherTime)
     {
         return compareTo(anotherTime) == 0;
     }
 
+    @Override
     public boolean equals(Object o)
     {
-        try {
-            return equals((TimeInterface)o);
-        }
-        catch(ClassCastException e) {
+        if( o instanceof TimeInterface ) {
+            return compareTo( TimeInterface.class.cast( o ) ) == 0;
+            }
+        else {
             return false;
-        }
+            }
     }
 
+    @Override
     public int compareTo(TimeInterface anotherTime)
         throws ClassCastException
     {
@@ -264,65 +338,94 @@ public class BasicTime
         return res != 0L ? -1 : 0;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public boolean isBefore(TimeInterface anotherTime)
     {
         return compareTo(anotherTime) > 0;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public boolean isAfter(TimeInterface anotherTime)
         throws ClassCastException
     {
         return compareTo(anotherTime) < 0;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public TimeInterface add(TimeInterface anotherTime)
-        throws cx.ath.choisnet.util.datetime.BasicDateTimeNegativeValueException
+        throws BasicDateTimeNegativeValueException
     {
         set(longValue() + anotherTime.longValue());
 
         return this;
     }
 
+    /**
+     * TODO:Doc!
+     */
     public TimeInterface sub(TimeInterface anotherTime)
-        throws cx.ath.choisnet.util.datetime.BasicDateTimeNegativeValueException
+        throws BasicDateTimeNegativeValueException
     {
         set(longValue() - anotherTime.longValue());
 
         return this;
     }
 
-    private void writeObject(ObjectOutputStream stream)
-        throws java.io.IOException
-    {
-        stream.defaultWriteObject();
-        stream.writeInt(seconds);
-        stream.writeInt(minutes);
-        stream.writeInt(hours);
-    }
+//    private void writeObject(ObjectOutputStream stream)
+//        throws java.io.IOException
+//    {
+//        stream.defaultWriteObject();
+//        stream.writeInt(seconds);
+//        stream.writeInt(minutes);
+//        stream.writeInt(hours);
+//    }
+//
+//    private void readObject(ObjectInputStream stream)
+//        throws java.io.IOException, ClassNotFoundException
+//    {
+//        stream.defaultReadObject();
+//        seconds = stream.readInt();
+//        minutes = stream.readInt();
+//        hours = stream.readInt();
+//    }
 
-    private void readObject(ObjectInputStream stream)
-        throws java.io.IOException, ClassNotFoundException
-    {
-        stream.defaultReadObject();
-        seconds = stream.readInt();
-        minutes = stream.readInt();
-        hours = stream.readInt();
-    }
-
+    /**
+     * TODO:Doc!
+     */
     public static BasicTime subtract(BasicTime basicTime1, BasicTime basicTime2)
-        throws cx.ath.choisnet.util.datetime.BasicDateTimeNegativeValueException
+        throws BasicDateTimeNegativeValueException
     {
         return new BasicTime(basicTime1.longValue() - basicTime2.longValue());
     }
 
+    /**
+     * TODO:Doc!
+     */
     private static BasicTime buildBasicTime(int hours, int minutes, int seconds)
     {
         try {
             return new BasicTime(hours, minutes, seconds);
-
-        }
-        catch(cx.ath.choisnet.util.datetime.BasicTimeException e) {
+            }
+        catch(BasicTimeException e) {
             throw new RuntimeException(e);
-        }
+            }
     }
+
+    /**
+     * TODO:Doc!
+     */
+    private DateFormat getIsoDateFormat()
+    {
+        if( transient_ISO_DATE_FMT == null ) {
+            transient_ISO_DATE_FMT = new SimpleDateFormat(TIME_FMT);
+        }
+        return transient_ISO_DATE_FMT;
+    }
+
 }
