@@ -1,6 +1,7 @@
 package cx.ath.choisnet.util.datetime;
 
 /**
+ * TODO: Doc!
  *
  * @author Claude CHOISNET
  */
@@ -8,6 +9,7 @@ public interface DateInterface
     extends DateTimeInterface, Comparable<DateInterface>
 {
     /**
+     * TODO: Doc!
      * 
      * @param date
      * @return true if date is before current date
@@ -15,6 +17,7 @@ public interface DateInterface
     public abstract boolean isBefore(DateInterface date);
 
     /**
+     * TODO: Doc!
      * 
      * @param date
      * @return true if date is after current date
@@ -22,6 +25,7 @@ public interface DateInterface
     public abstract boolean isAfter(DateInterface date);
 
     /**
+     * TODO: Doc!
      * 
      * @param date
      * @return TODO doc!
@@ -31,6 +35,7 @@ public interface DateInterface
         throws BasicDateTimeException;
 
     /**
+     * TODO: Doc!
      * 
      * @param date
      * @return TODO doc!
@@ -40,12 +45,16 @@ public interface DateInterface
         throws BasicDateTimeException;
 
     /**
+     * TODO: Doc!
+     * 
      * @param date
      * @return TODO doc!
      */
     public abstract int compareTo(DateInterface date);
 
     /**
+     * TODO: Doc!
+     * 
      * @param date
      * @return TODO doc!
      */
